--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
+altgraph==0.17.3
+future==0.18.2
+numpy==1.23.4
 pandas==1.5.0
-pymupdf==1.20.2
-pysimplegui==4.60.4
+pefile==2022.5.30
+pyinstaller==5.6.1
+pyinstaller-hooks-contrib==2022.10
+PyMuPDF==1.20.2
+PyQt5==5.15.7
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.11.0
+PySimpleGUI==4.60.4
+python-dateutil==2.8.2
+pytz==2022.5
+pywin32-ctypes==0.2.0
+six==1.16.0
